--- a/Contacto.html
+++ b/Contacto.html
@@ -13,12 +13,39 @@
         <a class="enlace" href="Sitio Principal.html">Productos</a>
         <a class="enlace" href="Contacto.html">Contacto</a>
     </header>
+
+    <tit2>Formulario de Contacto</tit2>
+    <dato>
+    <form>
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre">
+        <label for="apellido">Apellido:</label>
+        <input type="text" id="apellido">
+        <label for="email">Email:</label>
+        <input type="text" id="email">
+        <label for="telefono">Telefono:</label>
+        <input type="text" id="telefono">
+        <textarea name="comentario" id="comentario"></textarea>
+
+        <button id="enviar">Enviar</button>
+    </form>
+    <info>
+    *Telefono: (2021-222324)
+    *Direccion: Avda.Argentina, Olavarria
+    *super-chino.com.ar *@Super-Chino_Official *super_chino2023/24@gmail.com
+    </info>
+    </dato>
+
     
     <footer>
         <div class="logo">Super-Chino</div>
         <p1>Copyright @ 2024</p1>
         <p2>@Super-Chino_Official</p2>
     </footer>  
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+
+    <script src="Contacto.js"></script>
     
 </body>
 </html>
