--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
         <a class="enlace" href="Contacto.html">Contacto</a>
     </header>
 
-    <ofertas></ofertas>
+    <ofertas><img src="Images/oferta.jpg" alt="1"><img src="Images/producto.png" alt="1"><img src="Images/descuento.png" alt="1"></ofertas>
 
     <historia>
         <texto>
