--- a/Sitio Principal.html
+++ b/Sitio Principal.html
@@ -13,12 +13,19 @@
         <a class="enlace" href="Sitio Principal.html">Productos</a>
         <a class="enlace" href="Contacto.html">Contacto</a>
     </header>
+
+    <div id="contenedor"> <ul id="lista"></ul> </div>
     
+    <p id="total"></p>
+    <button id="resetButton" onclick="resetTotal()">Comprar</button>
+
     <footer>
         <div class="logo">Super-Chino</div>
         <p1>Copyright @ 2024</p1>
         <p2>@Super-Chino_Official</p2>
     </footer>  
-    
+
+    <script src="lista.js"></script>
+
 </body>
 </html>
